# variants

./: Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: clippy.yml  crates.yml  rust.yml
derive/: Cargo.toml
derive/src/: lib.rs
variants/: Cargo.toml
variants/src/: lib.rs
