[workspace]
default-members = [
    "variants"
]

exclude = [ ]

members = [
    "variants",
    "derive"
]

resolver = "2"

[workspace.dependencies]
anyhow = "1"
lazy_static = "1"
paste = "1"
smart_default = "0.7"
thiserror = "2"

[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com>",]
categories = [ ]
description = "Useful macros for constructing enum variants"
edition = "2021"
homepage = "https://github.com/FL03/variants/wiki"
keywords = [ ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/variants.git"
version = "0.0.0"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = 'unwind'
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = 'unwind'
rpath = false
opt-level = "z"
overflow-checks = false
