[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "variants"
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[features]
default = [
    "std",
]

full = [
    "default",
    "derive",
]

derive = [
    "dep:variants-derive",
]
# ********* [FF] Dependencies *********
alloc = []

# ********* [FF] Environments *********
std = [
    "alloc",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[dependencies.variants-derive]
optional = true
path = "../derive"
version = "0.0.0"
